test/rbkt/Queries/zorba/syntax_errors/entity_reference.xq
(: 
  Syntax error with an improved error message:
  invalid character/entity reference and its location
:)

let $x := "http://www.neimanmarcus.com/store/catalog/templates/SC.jhtml?itemId=cat24220735&parentId=cat17740747&masterId=cat000001&cmCat=&view=superall&navid=viewallsubs"
return $x